--- a/main.css
+++ b/main.css
@@ -37,34 +37,7 @@
     --hover: #fff;
 }
 
-.fill {
-    --color: #a972cb;
-    --hover: #cb72aa;
-}
-.pulse {
-    --color: #ef6eae;
-    --hover: #ef8f6e;
-}
-.close {
-    --color: #ff7f82;
-    --hover: #ffdc7f;
-}
-.raise {
-    --color: #ffa260;
-    --hover: #e5ff60;
-}
-.up {
-    --color: #e4cb58;
-    --hover: #94e458;
-}
-.slide {
-    --color: #8fc866;
-    --hover: #66c887;
-}
-.offset {
-    --color: #19bc8b;
-    --hover: #1973bc;
-}
+
 button {
     color: var(--color);
     transition: 0.25s;
@@ -145,3 +118,223 @@ code {
     color: #e4cb58;
     font: inherit;
 }
+
+
+
+/*--------------------------------------------------------------*/
+
+/* latin-ext */
+@font-face {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 400;
+    src: url(https://fonts.gstatic.com/s/lato/v23/S6uyw4BMUTPHjxAwXjeu.woff2) format('woff2');
+    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+  }
+  /* latin */
+  @font-face {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 400;
+    src: url(https://fonts.gstatic.com/s/lato/v23/S6uyw4BMUTPHjx4wXg.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  }
+
+
+
+  .w3-dropdown-hover:first-child, .w3-dropdown-click:hover {
+    background-color: transparent;
+    color: #fff;
+  }
+
+  .menu{
+    /*float: center !important;*/
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+
+  }
+
+@media only screen and (max-width: 600px) {
+  .menu{
+    /*float: center !important;*/
+    position: absolute;
+    right: 0;
+
+    left: auto;
+    transform: none;
+
+  }
+}
+  .menu-right {
+    margin-right: 50px!important;
+}
+
+.large-header {
+	position: relative;
+	width: 100%;
+	background: #333;
+	overflow: hidden;
+	background-size: cover;
+	background-position: center center;
+	z-index: 1;
+}
+
+#large-header {
+	background-image: url('./images/brad-main-4.jpg');
+  
+}
+
+.main-title2 {
+  font-size: 15px!important;
+  font-family: "Oswald";
+	position: absolute;
+	margin: 0;
+	padding: 0;
+	color: #f9f1e9;
+	text-align: center;
+	top: 50%;
+	left: 50%;
+	-webkit-transform: translate3d(-50%,-50%,0);
+	transform: translate3d(-50%,-50%,0);
+}
+
+@media only screen and (max-width: 600px) {
+    .main-title {
+            width: 100%;
+}
+
+}
+
+.demo-1 .main-title {
+	text-transform: uppercase;
+	font-size: 4.2em;
+	letter-spacing: 0.1em;
+}
+
+.main-title .thin {
+	font-weight: 200;
+}
+
+@media only screen and (max-width : 768px) {
+	.demo-1 .main-title {
+		font-size: 3em;
+	}
+}
+
+/*_________________________________________________________________*/
+
+/* latin-ext */
+@font-face {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 400;
+    src: url(https://fonts.gstatic.com/s/lato/v23/S6uyw4BMUTPHjxAwXjeu.woff2) format('woff2');
+    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+  }
+  /* latin */
+  @font-face {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 400;
+    src: url(https://fonts.gstatic.com/s/lato/v23/S6uyw4BMUTPHjx4wXg.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  }
+
+
+
+  .w3-dropdown-hover:first-child, .w3-dropdown-click:hover {
+    background-color: transparent;
+    color: #fff;
+  }
+
+  .menu{
+    /*float: center !important;*/
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+
+  }
+
+@media only screen and (max-width: 600px) {
+  .menu{
+    /*float: center !important;*/
+    position: absolute;
+    right: 0;
+
+    left: auto;
+    transform: none;
+
+  }
+}
+  .menu-right {
+    margin-right: 50px!important;
+}
+
+.large-header {
+	position: relative;
+	width: 100%;
+	background: #333;
+	overflow: hidden;
+	background-size: cover;
+	background-position: center center;
+	z-index: 1;
+}
+
+#large-header {
+	background-image: url('./images/brad-main-4.jpg');
+  
+}
+
+.main-title {
+  font-size: 15px!important;
+  font-family: "Oswald";
+	position: absolute;
+	margin: 0;
+	padding: 0;
+	color: #f9f1e9;
+	text-align: center;
+	top: 50%;
+	left: 50%;
+	-webkit-transform: translate3d(-50%,-50%,0);
+	transform: translate3d(-50%,-50%,0);
+}
+
+@media only screen and (max-width: 600px) {
+    .main-title {
+            width: 100%;
+}
+
+}
+
+.demo-1 .main-title {
+	text-transform: uppercase;
+	font-size: 4.2em;
+	letter-spacing: 0.1em;
+}
+
+.main-title .thin {
+	font-weight: 200;
+}
+
+@media only screen and (max-width : 768px) {
+	.demo-1 .main-title {
+		font-size: 3em;
+	}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
